--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.6.0
   skeletonizer: ^2.1.1
+  flutter_easyloading: ^3.0.5
+  flutter_slidable: ^4.0.3
 
 dev_dependencies:
   flutter_test:
